Checkout x-overflow fix, catalog background color update

--- a/public/resources/css/checkout_menu.css
+++ b/public/resources/css/checkout_menu.css
@@ -26,10 +26,6 @@
     position: fixed;
 }
 /*General Tags*/
-body{
-    background-color: rgb(249, 249, 249);
-    letter-spacing: 0.01em;
-}
 ul {
     list-style-type: none;
 }
